[metadata]
name = cryptio
summary = File object wrapper for aead
description-file =
    README.rst
author = Zack Buhman
author-email = zack@buhman.org
home-page = https://github.com/ptpb/cryptio
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    cryptio